# TravelAssistant

./: README.md  pyproject.toml  requirements.txt
output/: flights.md  hotels.md  itinerary.md  weather.md
src/travel_assistant/: chat_assistant.py  crew.py  main.py
src/travel_assistant/config/: agents.yaml  tasks.yaml
src/travel_assistant/tools/: custom_tool.py  flight_tool.py  hotel_tool.py  weather_tool.py
